--- a/index.html
+++ b/index.html
@@ -51,11 +51,18 @@
 
   <script>
     setTimeout(function () {
-      window.location.href = "managermentloc/Landingpage/landingpage.html";
+      window.location.href = "landingpage.html";
     }, 4000);
   </script>
 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LGMPS657N9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-LGMPS657N9');
+  </script>
 </body>
 </html>
-
